--- a/index.html
+++ b/index.html
@@ -5,13 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unin</title>
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
 </head>
 <body>
     <h3>Unin</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Praesentium, ad animi dolorem officiis culpa dolor facere cum temporibus, 
-        quos dolore quidem perspiciatis reiciendis? 
-        Nemo ut nobis, aliquam ipsum ipsam doloribus?</p>
+
+    <div id="layout-container">
+        <div id="layout">
+            <div class="detail inf">
+
+            </div>
+
+            <div class="topics inf">
+                <h4>Inf</h4>
+                <ul class="inf">
+                    <li>9   calcolo e alg lin</li>
+                    <li>3   ing tecnico</li>
+                    <li>1   Fisica nuova v</li>
+                    <li>9   Informatica</li>
+                    <li>9   met mat per ing</li>
+                    <li>6   chimica</li>
+                    <li>6   alg e pro av</li>
+                </ul>
+                <ul class="inf">
+                    <li>6   database</li>
+                    <li>6   economia g az</li>
+                    <li>9   elettrotecnica</li>
+                    <li>12  ing software oop</li>
+                    <li>12  com elettr</li>
+                    <li>6   calc elettr 1</li>
+                    <li>9   elettronica</li>
+                    <li>6   sist op</li>
+
+                </ul>
+                <ul class="inf">
+                    <li>9   reti di calc</li>
+                    <li>12  control sys</li>
+                    <li>6   mat disc</li>
+                    <li>6   met num</li>
+                    <li>3   tirocinio</li>
+                    <li>9   inglese</li>
+                    <li>3   prova</li>
+                    <li>3   extra</li>
+                </ul>
+            </div>
+            
+            <div class="topics ing">
+                <h4>Ing</h4>
+                <ul class="ing">
+                    <li>9   calc e alg lin</li>
+                    <li>3   ing tec</li>
+                    <li>9   fisica nuova v</li>
+                    <li>9   informatica</li>
+
+                    <li>9   met mat</li>
+                    <li>9   chimica</li>
+                    <li>9   alg e pro</li>
+                </ul>
+                <ul class="ing">
+                    <li>9   sist inf e database</li>
+                    <li>6   econ e gest imp</li>
+                    <li>9   elettrotecn</li>
+                    <li>9   ing sw e oop</li>
+                    <li>9   compl mat</li>
+                    <li>6   prob stat</li>
+                    <li>9   elettr e mis</li>
+                </ul>
+                <ul class="ing">
+                    <li>9   sist op</li>
+                    <li>9   arch calc</li>
+                    <li>9   com elettr</li>
+                    <li>9   teoria contr aut</li>
+                    <li>9   reti di calc</li>
+                    <li>3   tirocinio</li>
+                    <li>3   prova</li>
+                    <li>3   ulteriori</li>
+                </ul>
+            </div>
+
+            <div class="detail ing">
+
+            </div>
+        </div>
+    </div>
+
+<script src="main.js"></script>
 </body>
 </html>
